[package]
name = "miclockwork-cron"
version = "0.1.0"
description = "A cron expression parser that's safe to use in the Solana runtime"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/Maius-Protocol/clockwork/tree/test-sdk"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[lib]
name = "miclockwork_cron"

[dependencies]
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
nom = "~7"
once_cell = "1.5.2"

