[package]
name = "miclockwork-thread-program"
version = "0.1.0"
description = "Clockwork thread program"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/Maius-Protocol/clockwork/tree/test-sdk"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "miclockwork_thread_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
miclockwork-cron = { path = "../../cron", version = "=0.1.0" }
miclockwork-network-program = { path = "../network", features = ["cpi"], version = "=0.1.0" }
miclockwork-thread-program-v1 = { path = "v1", version = "=0.1.0" }
miclockwork-utils = { path = "../../utils", version = "=0.1.0" }
pyth-sdk-solana = "0.8.0"
static-pubkey = "1.0.3"
version = "3.0.0"
