[package]
name = "clockwork-webhook-program"
version = "2.0.19"
description = "Clockwork webhook program"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/clockwork"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "clockwork_webhook_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { features = ["init-if-needed"], version = "0.28.0" }
miclockwork-network-program = { path = "../network", features = ["cpi"], version = "=0.1.0" }
miclockwork-utils = { path = "../../utils", version = "=0.1.0" }
serde = "1.0.152"
